# Exam_Project

.gitignore/: 新建 文本文档.txt
backend/Exam_platform/: pom.xml
deploy/huawei/: README.md  env.example  exam-platform.service  install-on-ecs.sh  package-backend.ps1  upload-to-ecs.ps1
deploy/package/exam-platform/: .env.example  exam_system_seed_accounts.sql  mysql_teacher_exam_schema.sql  start-backend.sh
docs/: Java中档编程题35道.xlsx  day1_development_log.txt  ds_100.csv  high_maths.csv  java_100.csv  linear_100.csv  mysql_100.csv  questions_template.csv  ~$数据结构中档编程题35道.xlsx  学科填空题汇总.xlsx  数据结构中档编程题35道.xlsx
docs/ui_mockups/: generate-ui-images.js
qt_client/exam_qt/: AdminMainWindow.cpp  AdminMainWindow.h  AnswerPreviewWidget.cpp  AnswerPreviewWidget.h  AppConfig.cpp  AppConfig.h  CMakeLists.txt  DistributionChartWidget.cpp  DistributionChartWidget.h  ExamInfoCard.cpp  ExamInfoCard.h  ExcelExporter.cpp  ExcelExporter.h  LevelPieChartWidget.cpp  LevelPieChartWidget.h  LoginWidget.h  LoginWindow.cpp  LoginWindow.h  PdfExporter.cpp  PdfExporter.h  PrintPreviewWidget.cpp  PrintPreviewWidget.h  QMakeLists.txt  QuestionAnalysisWidget.cpp  QuestionAnalysisWidget.h  RegisterWidget.h  ReportGenerator.cpp  ReportGenerator.h  ScoreFilterWidget.cpp  ScoreFilterWidget.h  ScorePanelWidget.cpp  ScorePanelWidget.h  ScorePrintWindow.cpp  ScorePrintWindow.h  StatisticCardWidget.cpp  StatisticCardWidget.h  StudentListWidget.cpp  StudentListWidget.h  StudentMainWindow.cpp  StudentMainWindow.h  (+19 more)
qt_client/exam_qt/qml/: AdminMain.qml  LoginView.qml  RoleHome.qml  StudentMain.qml  TeacherMain.qml
qtcharts-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  config.opt.in  config.summary  install_manifest.txt
qtcharts-build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
qtcharts-build/.rcc/qmlcache/: aotstats_empty_modules.txt
qtcharts-build/config.tests/binary_for_strip_built/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
qtcharts-build/include/QtCharts/: qabstractaxis.h  qabstractbarseries.h  qabstractseries.h  qarealegendmarker.h  qareaseries.h  qbarcategoryaxis.h  qbarlegendmarker.h  qbarmodelmapper.h  (+47 more)
qtcharts-build/lib/: Qt6Charts.prl
qtcharts-build/modules/: Charts.json  ChartsQml.json
qtcharts-build/qt_sbom/: DocumentRef-qtbase.cmake  DocumentRef-qtdeclarative.cmake  SPDXRef-DOCUMENT-qtcharts.spdx.in  SPDXRef-LicenseRef-Qt-Commercial-0.cmake  SPDXRef-Package-qtcharts-qt-module-Charts.cmake  SPDXRef-Package-qtcharts-qt-module-ChartsQml.cmake  SPDXRef-Package-qtcharts-qt-plugin-qtchartsqml2.cmake  SPDXRef-PackagedFile-qt-module-Charts-ImportLibrary.cmake  SPDXRef-PackagedFile-qt-module-Charts.cmake  SPDXRef-PackagedFile-qt-module-ChartsQml-ImportLibrary.cmake  SPDXRef-PackagedFile-qt-module-ChartsQml.cmake  SPDXRef-PackagedFile-qt-plugin-qtchartsqml2.cmake  append_document_to_staging.cmake  assemble_sbom.cmake  staging-qtcharts.spdx.in  verification.txt
qtcharts-build/src/: CTestTestfile.cmake  cmake_install.cmake
(+826 files in other folders)
